--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Deeeply</title>
     <link rel="icon" href="/favicon.png" type="image/png">
     <meta name="description" content="안 들어오면..나..24시간 뒤에..터진다?ㅋ">
-    <link rel="apple-touch-icon" href="/favicon.png" si;zes="180x180">
+    <link rel="apple-touch-icon" href="/favicon.png" sizes="180x180">
     <link rel="mask-icon" href="/favicon.png" color="#1F1F20">
     <meta name="theme-color" content="#1F1F20">
     <link href="/src/styles.css" rel="stylesheet">
