[USD-63] feat : PWA 설정 완료 (#16)
* [USD-63] feat : PWA 설정 완료

* [USD-63] feat : AI 제안 수정사항 반영

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0" />
     <title>Deeeply</title>
+    <link rel="icon" href="/favicon.png" type="image/png">
+    <meta name="description" content="안 들어오면..나..24시간 뒤에..터진다?ㅋ">
+    <link rel="apple-touch-icon" href="/favicon.png" sizes="180x180">
+    <link rel="mask-icon" href="/favicon.png" color="#1F1F20">
+    <meta name="theme-color" content="#1F1F20">
     <link href="/src/styles.css" rel="stylesheet">
   </head>
   <body>
